CREATE TABLE user_profiles (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    keycloak_id VARCHAR(255) NOT NULL,
    full_name VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL,
    role VARCHAR(255) NOT NULL,
    active BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    updated_at TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    CONSTRAINT uk_user_profiles_keycloak_id UNIQUE (keycloak_id),
    CONSTRAINT uk_user_profiles_email UNIQUE (email),
    CONSTRAINT ck_user_profiles_role CHECK (role IN ('EMPLOYEE', 'MANAGER', 'ADMIN'))
);
